# deployproof-lab

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  WORKLOG.md  pyproject.toml  requirements-dev.txt
app/: Dockerfile
app/deployproof_api/: __init__.py  main.py
chart/deployproof/: Chart.yaml  values.schema.json  values.yaml
chart/deployproof/files/migrations/: 001_schema.sql  002_seed.sql
chart/deployproof/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  migration-configmap.yaml  migration-job.yaml  postgresql-service.yaml  postgresql-statefulset.yaml  service.yaml
docs/: PROJECT_PLAN.md  REFERENCES.md
kind/: cluster.yaml
load/: liveness.js
policies/: release-images.yaml  workload-security.yaml
release/: contract.yaml
scripts/: bootstrap.sh  lab.sh
src/deployproof/: __init__.py  cli.py  config.py
tests/: test_api.py  test_clean_room.py  test_cluster.py  test_config.py  test_evidence.py  test_integration.py  test_live_certification.py  test_load.py  test_pipeline.py  test_project_contract.py  test_rollback.py  test_smoke.py
tests/fixtures/: invalid-deployment.yaml  policy-violation.yaml
